--- a/less/navigation.less
+++ b/less/navigation.less
@@ -42,3 +42,36 @@
     }
   }
 } // .main-navigation
+
+#busImg {
+  cursor:pointer;
+}
+
+#busImgText {
+  text-align:center;
+}
+
+.funBus {
+  width: 15%;
+  cursor: pointer;
+}
+
+.dropzone{
+  width:130px;
+  margin-left:11%;
+  margin-top:15%;
+  position:absolute;
+  opacity:.7;
+}
+
+.dropzone2{
+  width:130px;
+  margin-left:83%;
+  margin-top:15%;
+  position:absolute;
+  opacity:.7;
+}
+
+.off {
+  display: none;
+}
